--- a/other_expts/process_gemini_pred.ipynb
+++ b/other_expts/process_gemini_pred.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This script loads the the results from eval_gemini.py (saved in `gemini_pred.csv`) and computes metrics for different video speeds."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,6 +17,8 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
     "\n",
     "df = pd.read_csv(\"gemini_pred.csv\", sep=\",\")\n",
     "    "
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +56,8 @@
        "      <th>text answer</th>\n",
        "      <th>prediction</th>\n",
        "      <th>correct</th>\n",
+       "      <th>speed_category</th>\n",
+       "      <th>aligned_video_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -58,6 +69,8 @@
        "      <td>The primary objective and focus within the vi...</td>\n",
        "      <td>3</td>\n",
        "      <td>True</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>0074f737-11cb-497d-8d07-77c3a8127391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -67,6 +80,8 @@
        "      <td>The primary purpose of the cup of water in th...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>00b9a0de-c59e-49cb-a127-6081e2fb8c8e</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -76,6 +91,8 @@
        "      <td>The video shows two people playing a board ga...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>00f93e1e-cf4e-4835-88b4-4ad68216e86f</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -85,6 +102,8 @@
        "      <td>The answer is \"Option 1\". \\n\\nThe video shows...</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>00faf954-74f7-4aa3-8b29-4a5dff4f9518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -94,6 +113,8 @@
        "      <td>C made several adjustments throughout the vid...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>011b8b73-0ce4-4843-95ef-33b79610d212</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -114,20 +135,28 @@
        "3  {'question': 'What is the primary sequence of ...            4   \n",
        "4  {'question': \"What can be deduced about c's le...            3   \n",
        "\n",
-       "                                         text answer  prediction  correct  \n",
-       "0   The primary objective and focus within the vi...           3     True  \n",
-       "1   The primary purpose of the cup of water in th...           0    False  \n",
-       "2   The video shows two people playing a board ga...           0    False  \n",
-       "3   The answer is \"Option 1\". \\n\\nThe video shows...           1    False  \n",
-       "4   C made several adjustments throughout the vid...           0    False  "
+       "                                         text answer  prediction  correct  \\\n",
+       "0   The primary objective and focus within the vi...           3     True   \n",
+       "1   The primary purpose of the cup of water in th...           0    False   \n",
+       "2   The video shows two people playing a board ga...           0    False   \n",
+       "3   The answer is \"Option 1\". \\n\\nThe video shows...           1    False   \n",
+       "4   C made several adjustments throughout the vid...           0    False   \n",
+       "\n",
+       "  speed_category                      aligned_video_id  \n",
+       "0         normal  0074f737-11cb-497d-8d07-77c3a8127391  \n",
+       "1         normal  00b9a0de-c59e-49cb-a127-6081e2fb8c8e  \n",
+       "2         normal  00f93e1e-cf4e-4835-88b4-4ad68216e86f  \n",
+       "3         normal  00faf954-74f7-4aa3-8b29-4a5dff4f9518  \n",
+       "4         normal  011b8b73-0ce4-4843-95ef-33b79610d212  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# First each row contains a question and a video (with id indicating video speed)\n",
     "df.head()"
    ]
   },
@@ -219,7 +248,8 @@
     }
    ],
    "source": [
-    "# Correcting the pivoting process\n",
+    "# Next we want to align each questions with video predictions for different speeds\n",
+    "\n",
     "# We will create a new column to differentiate between normal, 4x, and 10x speeds based on the video_id\n",
     "def categorize_video_speed(video_id):\n",
     "    if '4x' in video_id:\n",
@@ -247,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop the row with nan vales from pivoted_data\n",
+    "# drop the row with nan vales from pivoted_data (one video could not be run at 4x_speed)\n",
     "pivoted_data = pivoted_data.dropna()"
    ]
   },
@@ -369,6 +399,7 @@
     }
    ],
    "source": [
+    "# We add the ground truth to the pivoted data\n",
     "ground_truth = df.groupby('aligned_video_id')['true answer'].first()\n",
     "pivoted_data = pivoted_data.join(ground_truth)\n",
     "pivoted_data.head()"
@@ -380,8 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy import stats\n",
-    "\n",
+    "# Lastly we would like to calculate the accuracy and confidence interval for each speed category\n",
     "# Re-defining the function to calculate the 95% confidence interval for proportion\n",
     "def calculate_proportion_confidence_interval(correct, total):\n",
     "    \"\"\" Calculate the 95% confidence interval for a proportion. \"\"\"\n",
